src/sortableTable.core-styles.css
/* CORE-STYLES */
.sortable-filter output {
  font-size: var(--global-font-size--small);
}
label.sortable-filter output {
  font-weight: normal;
}

/* CORE-STYLES + BOOTSTRAP */
/* To fix sort button height and alignment */
button.js-sort {
  &.btn-link,
  &.c-button--as-link {
    line-height: inherit;
    height: 1lh;
    justify-content: start;
    vertical-align: baseline;
  }
  &.btn-link {
    padding: 0;
  }
}

